--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-session": "^1.14.2",
     "mongoose": "^4.7.1",
     "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "socket.io": "^1.7.3"
   }
 }
