--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ejs": "~2.5.2",
     "express": "~4.14.0",
     "express-session": "^1.14.2",
+    "mongodb": "^2.2.24",
     "mongoose": "^4.7.1",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.0"
